Replace all deprecated primitive constructors with valueOf
new Float(f)  -> Float.valueOf(f)
new Double(d) -> Double.valueOf(d)
new Boolean(b)-> Boolean.valueof(b)
new Integer(b)-> Integer.valueof(b)