@@ -320,7 +320,7 @@ public class CalculReferenceZeroJRU extends ACalculReferenceZero {
 					// message précédent
 					deltaTempsTempo = deltaTempsTempo + tempsAvtChgt - tempsLastMsg;
 				}
-				deltaTempsMsgs.put(new Integer(msg.getMessageId()), new Long(deltaTempsTempo));
+				deltaTempsMsgs.put(Integer.valueOf(msg.getMessageId()), Long.valueOf(deltaTempsTempo));
 			}
 
 			if (msg.getMessageId() == m.getMessageId()) {
@@ -379,7 +379,7 @@ public class CalculReferenceZeroJRU extends ACalculReferenceZero {
 					str = ConversionTemps.getRelativeTimeAsString(0,jour, heure,minutes,seconde,ms);
 				} else {
 					if (!msg.getEvenement().isChangementHeure()) {
-						tmpRelatif = ((Long) deltaTempsMsgs.get(new Integer(idMsg))) - deltaTempsRef0;
+						tmpRelatif = ((Long) deltaTempsMsgs.get(Integer.valueOf(idMsg))) - deltaTempsRef0;
 					} else {
 						//long tempsAvtChgt = (Long) (msg.getVariable(codeTpsAvtChgt).getCastedValeur());
 						long tempsAvtChgt = ConversionTempsJRU.getTimeFromVariableTIME(msg.getVariable(codeTpsAvtChgt));
@@ -391,7 +391,7 @@ public class CalculReferenceZeroJRU extends ACalculReferenceZero {
 						tc.addDate(dateAvtChgt);
 						tc.addTime(tempsAvtChgt);
 
-						tmpRelatif = ((Long) deltaTempsMsgs.get(new Integer(idMsg))) - deltaTempsRef0;
+						tmpRelatif = ((Long) deltaTempsMsgs.get(Integer.valueOf(idMsg))) - deltaTempsRef0;
 					}
 				}
 
